<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">스토리 뮤지션</string>
    <string name="app_name_english">Story Musician</string>
    <string name="all_login">로그인</string>
    <string name="all_register">회원가입</string>
    <string name="all_email">Email</string>
    <string name="all_password">Password</string>
    <string name="login_login_with_google">구글\n로그인</string>
    <string name="login_login_with_kakaotalk">카카오톡\n로그인</string>
    <string name="all_next">다음</string>
    <string name="all_gotoback">뒤로가기</string>를
    <string name="register_input_email">이메일을 입력하세요</string>
    <string name="register_input_password">비밀번호 입력하세요</string>
    <string name="register_complete_register">작곡 준비 완료!</string>
    <string name="all_password_visibility">비밀번호 보기</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_navigation_recommededlist">추천 리스트</string>
    <string name="bottom_navigation_search">탐색</string>
    <string name="bottom_navigation_playlist">플레이 리스트</string>
    <string name="all_setting">설정</string>
    <string name="all_profile">프로필</string>
    <string name="all_setting_english">Settings</string>
    <string name="all_on">ON</string>
</resources>