<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".register.RegisterInfoFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_register_titletext_28sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@color/white"
        android:fontFamily="@font/scdream7"
        android:text="@string/register_input_email"
        android:id="@+id/textview_register_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        />

    <EditText
        android:id="@+id/edittext_register_info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/all_rounded_rectangle"
        android:backgroundTint="@color/edittext_background"
        android:hint="@string/all_password"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:maxLines="1"
        android:maxLength="25"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColorHint="@color/hint_text_color"
        android:textSize="16sp"
        app:layout_constraintDimensionRatio="5.8956:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_register_title"
        android:layout_marginTop="32dp"
        app:layout_constraintWidth_percent="0.7"
        tools:ignore="TouchTargetSizeCheck"
        tools:targetApi="o" />

    <ImageButton
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/all_visibility"
        android:background="@null"
        app:layout_constraintDimensionRatio="1:1"
        android:visibility="visible"
        android:contentDescription="@string/all_password_visibility"
        app:layout_constraintTop_toTopOf="@id/edittext_register_info"
        app:layout_constraintBottom_toBottomOf="@id/edittext_register_info"
        app:layout_constraintRight_toRightOf="@id/edittext_register_info"
        android:layout_marginEnd="16dp"
        android:id="@+id/imagebutton_register_password_visibility"
        app:tint="@color/all_Disabled_color" />

</androidx.constraintlayout.widget.ConstraintLayout>